log
ju., 21 de abr. de 2022 12:36:13: 
 tests:  1|8
total_score: 0/70
ae67d48
ju., 21 de abr. de 2022 12:38:01: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  8|7
total_score: 10/70
519efff
ju., 21 de abr. de 2022 13:01:38: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:52:29: error: statement with no effect [-Werror=unused-value]
     else(newNode->pair->key < aux->pair->key)aux->left = newNode;
         ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
treemap.c:52:46: error: expected ';' before 'aux'
     else(newNode->pair->key < aux->pair->key)aux->left = newNode;
                                              ^~~
treemap.c:48:12: error: unused variable 'p' [-Werror=unused-variable]
     Pair * p = searchTreeMap(tree, key);
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
e91b4a0
